# train-llm-tutorial

./: README.md  black_box_test.py  black_box_test_openchat35.py  data_create_csv2datasets.py  dataset_analisys.py  dataset_load.py  decomposer.py  model_evaluete.py  one_example_test.py  pyproject.toml  requirements.txt  run_llm.bash  start.py  test_dataset.json  test_docker_run.py  train_llm.py  vllm_test.py
data/: .~lock.vacation_prompt.csv#  test_dataset.json  vacation_prompt.csv  vacation_queries_more_20_tokens.csv  vacation_train_dataset.json
test_results/: black_box_vacation_query.cav  black_box_vacation_query.csv  black_box_vacation_query_prompts.csv  black_box_vacation_query_prompts_openchat35.csv  black_box_vacation_query_prompts_openchat35_2.csv  black_box_vacation_query_prompts_openchat35_Albert.csv  black_box_vacation_query_prompts_openchat35_assistent.csv  vllm_vacation_prompts_openchat35_temp01.csv  vllm_vacation_query_prompts_openchat35_exmpl.csv
